syntax = "proto3";

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "io.grpc.examples.leveldb";
option java_outer_classname = "LevelDBProto";
option objc_class_prefix = "HLW";

package database;

service Database {

  rpc Get (GetRequest) returns (GetReply) {}

  rpc Put (PutRequest) returns (PutReply) {}

  rpc GetAllKeys (google.protobuf.Empty) returns (GetAllKeysReply) {}
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string errormsg = 1;
  string value = 2;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutReply {
  string errormsg = 1;
}

message KVpair{
  string key = 1;
  string value = 2;
}

message LogEntry {
  string command = 1;
  string key = 2;
  string value = 3;
  uint64 term = 4;
}

message GetAllKeysReply {
  string errormsg = 1;
  repeated KVpair KVpairs = 2;
  string role = 3;
  repeated LogEntry entries =4;
}